--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ascend</title>
-    <link rel="icon" type="image/png" href="./ascend_favi.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/ascend_favi.png" />
     <link rel="stylesheet" href="../src/components/home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
